style.css
html {
    background-color:  #F9FAFB;
    font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', sans-serif;
}

body {
    align-items: center;
    justify-items: center;
}

.content {
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    flex-wrap: wrap;
    background-color: #282523;
    width: 320px;
    padding: 20px;
    border-radius: 30px;
}

.container {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    align-content: center;
    justify-content: center;
    box-sizing: border-box;
}

button {
    width: 75px;
    height: 75px;
    border-radius: 50%;
    font-size: 20px;
    background-color: #4B4847;
    border: 1px solid black;
    color: white;
}

button.operator {
    background-color: rgb(255, 146, -2);
}

button.equal {
    background-color: rgb(255, 146, -2);

}

button.backspace,
.percent,
.clear {
    background-color: #757372;
}

.title {
    text-align: center;
    font-size: 24px;
    font-weight: bold;
    padding: 50px;
    color: black;
}

.display {
    display: flex;
    width: 320px;
    height: 250px;
    justify-content: end;
    align-items: end;
    color: white;
    font-size: 48px;
    box-sizing: border-box;
    padding-right: 20px;
    padding-bottom: 10px;
    background-color: #282523;
}

